@@ -9,8 +9,9 @@
 
 char src[N], dst[N];
 
-void foo (char * __restrict__ dst, char * __restrict__ src, int h,
-          int stride, int dummy)
+void __attribute__((noinline,noclone))
+foo (char * __restrict__ dst, char * __restrict__ src, int h,
+     int stride, int dummy)
 {
   int i;
   h /= 16;
@@ -55,7 +56,7 @@ int main (void)
   return 0;
 }
 
-/* { dg-final { scan-tree-dump-times "basic block vectorized" 1 "slp1" { target vect64 } } } */
+/* { dg-final { scan-tree-dump-times "basic block vectorized" 1 "slp1" { target { vect64 && vect_hw_misalign } } } } */
 /* { dg-final { cleanup-tree-dump "slp1" } } */
 /* { dg-final { cleanup-tree-dump "slp2" } } */
 
